[package]
name = "feather"
version = "0.1.0"
authors = ["Aydar <me@aydar.media>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
clap = "2.33.1"
encoding = "0.2.33"
progress_bar = "0.1.3"
colorful = "0.2.1"
directories = "2.0.2"
imageproc = "0.20.0"
rusttype = "0.8.2"
